Craft version update and bug fixes

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 ENVIRONMENT="dev"
 
 # The secure key Craft will use for hashing and encrypting data
-SECURITY_KEY=""
+SECURITY_KEY="vzVMamc25ty46Bt8OtP8bDTwGIEzIwWB"
 
 # The database driver that will be used ('mysql' or 'pgsql')
 DB_DRIVER="mysql"
@@ -14,10 +14,10 @@ DB_SERVER="localhost"
 DB_USER="root"
 
 # The database password to connect with
-DB_PASSWORD=""
+DB_PASSWORD="root"
 
 # The name of the database to select
-DB_DATABASE=""
+DB_DATABASE="twig_starter_test"
 
 # The database schema that will be used (PostgreSQL only)
 DB_SCHEMA="public"
@@ -26,10 +26,13 @@ DB_SCHEMA="public"
 DB_TABLE_PREFIX=""
 
 # The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
-DB_PORT=""
+DB_PORT="3306"
 
-# For style development with hot reloading:
-#  - Run `npm run hot` to start the webpack dev server
-#  - Set `USE_WEBPACK_DEV_SERVER=1` so Craft points to the dev server for JS and SCSS
-USE_WEBPACK_DEV_SERVER=0
+# The site url for this environment (no trailing slash)
+# The file `config/assetrev.php` depends on this environment variable.
+DEFAULT_SITE_URL="http://twig-starter.test"
+
+# Webpack dev server host for hot reloading.
+# See the README for more information.
+# If you need to change the port here, change it also in `webpack.config.js` line 19.
 WEBPACK_SERVER_URL="http://localhost:8080"
