Updating references to starter blog

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ DB_USER="root"
 DB_PASSWORD="root"
 
 # The name of the database to select
-DB_DATABASE="twig_starter_test"
+DB_DATABASE="starter_blog"
 
 # The database schema that will be used (PostgreSQL only)
 DB_SCHEMA="public"
@@ -30,7 +30,7 @@ DB_PORT="3306"
 
 # The site url for this environment (no trailing slash)
 # The file `config/assetrev.php` depends on this environment variable.
-DEFAULT_SITE_URL="http://twig-starter.test"
+DEFAULT_SITE_URL="http://starter-blog.test"
 
 # Webpack dev server host for hot reloading.
 # See the README for more information.
