Updating gatsby env reference to starter blog url

--- a/headless-front-end/gatsby/.example.env
+++ b/headless-front-end/gatsby/.example.env
@@ -1,2 +1,2 @@
 CRAFT_API_TOKEN = 1CFHS57JCTtYwQk0_2J-lD8dU3ACIfNU
-CRAFT_API_URL = http://twig-starter.test/api
+CRAFT_API_URL = http://starter-blog.test/api
