--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "project",
   "require": {
     "clubstudioltd/craft-asset-rev": "^6.0",
-    "craftcms/cms": "3.3.19",
+    "craftcms/cms": "^3.4.0-beta.5",
     "craftcms/redactor": "2.4.0",
     "nystudio107/craft-typogrify": "^1.1",
     "vlucas/phpdotenv": "^2.4.0",
