--- a/config/project.yaml
+++ b/config/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1578000714
+dateModified: 1578058764
 email:
   fromEmail: sam@craftcms.com
   fromName: 'Craft Blog'
@@ -98,6 +98,22 @@ fields:
     translationKeyFormat: null
     translationMethod: site
     type: craft\fields\Matrix
+graphql:
+  schemas:
+    265d76a5-d5a9-4c82-bee4-2f8450aacd0a:
+      isPublic: true
+      name: 'Public Schema'
+    55cd92b3-363e-4573-ad2c-04650483ba64:
+      isPublic: false
+      name: Gatsby
+      scope:
+        - 'sections.5a80053a-6435-4fd2-8a47-53e409d994ad:read'
+        - 'entrytypes.dbd1be32-5e0d-4483-92a5-cc47aba67dcc:read'
+        - 'sections.db2dff45-19b4-479c-8cba-ab88e7e7d2fd:read'
+        - 'entrytypes.bb6d289b-c3cf-4a8d-9324-b98cbd32753b:read'
+        - 'sections.4593234a-cdd0-4c54-9931-4eb606b9e7f5:read'
+        - 'entrytypes.8518a799-a012-4a6c-aa89-6a347cc00c2e:read'
+        - 'volumes.101a70a1-d200-4629-91e5-3425a0937c0e:read'
 matrixBlockTypes:
   0c98f9b9-84bf-4766-af63-a3568b46c0a6:
     field: e567b6ab-3855-452b-a337-4c119dac4d62
@@ -530,7 +546,7 @@ sites:
     siteGroup: 90dee5cc-23f1-40ac-ae14-3fa71bebc4dc
     sortOrder: 1
 system:
-  edition: solo
+  edition: pro
   live: true
   name: 'Craft Blog'
   schemaVersion: 3.4.6
