--- a/headless-front-end/gatsby/package.json
+++ b/headless-front-end/gatsby/package.json
@@ -5,27 +5,29 @@
   "version": "1.0.0",
   "author": "Jake Dohm <jake.dohm@me.com>",
   "dependencies": {
-    "gatsby": "^2.23.20",
-    "gatsby-image": "^2.2.10",
-    "gatsby-plugin-manifest": "^2.2.6",
+    "gatsby": "^2.24.45",
+    "gatsby-image": "^2.4.16",
+    "gatsby-plugin-manifest": "^2.4.23",
     "gatsby-plugin-offline": "^2.2.7",
-    "gatsby-plugin-react-helmet": "^3.1.4",
-    "gatsby-plugin-sass": "^2.1.12",
-    "gatsby-plugin-sharp": "^2.2.13",
-    "gatsby-source-filesystem": "^2.1.11",
-    "gatsby-source-graphql": "^2.1.10",
-    "gatsby-transformer-sharp": "^2.2.7",
-    "nuka-carousel": "^4.5.9",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sharp": "^2.6.27",
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-source-graphql": "^2.7.1",
+    "gatsby-transformer-sharp": "^2.5.13",
+    "nuka-carousel": "^4.7.0",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
-    "snyk": "^1.373.0"
+    "snyk": "^1.373.1"
   },
   "devDependencies": {
-    "node-sass": "^4.12.0",
-    "prettier": "^1.18.2",
-    "tailwindcss": "^1.1.2"
+    "@babel/polyfill": "^7.10.4",
+    "core-js": "^3.6.5",
+    "node-sass": "^4.14.1",
+    "prettier": "^1.19.1",
+    "tailwindcss": "^1.6.2"
   },
   "keywords": [
     "gatsby",
