--- a/headless-front-end/gatsby/.env.example
+++ b/headless-front-end/gatsby/.env.example
@@ -1,2 +1,2 @@
-CRAFT_API_TOKEN = 1CFHS57JCTtYwQk0_2J-lD8dU3ACIfNU
-CRAFT_API_URL = http://starter-blog.test/api
+CRAFTGQL_TOKEN = 1CFHS57JCTtYwQk0_2J-lD8dU3ACIfNU
+CRAFTGQL_URL = http://starter-blog.test/api
