--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "clubstudioltd/craft-asset-rev": "^6.0",
     "craftcms/cms": "^3.4.3",
-    "craftcms/craft-gatsby": "dev-master",
+    "craftcms/gatsby-helper": "dev-master",
     "craftcms/redactor": "^2.5.0",
     "nystudio107/craft-typogrify": "^1.1",
     "vlucas/phpdotenv": "^2.4.0",
@@ -26,7 +26,7 @@
   "repositories": [
     {
       "type": "vcs",
-      "url": "git@github.com:craftcms/craft-gatsby.git"
+      "url": "git@github.com:craftcms/gatsby-helper.git"
     }
   ],
   "scripts": {
