--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "clubstudioltd/craft-asset-rev": "^6.0",
     "craftcms/cms": "^3.4.3",
-    "craftcms/gatsby-helper": "dev-master",
+    "craftcms/gatsby-helper": "^1.0.0-beta.1",
     "craftcms/redactor": "^2.5.0",
     "nystudio107/craft-typogrify": "^1.1",
     "vlucas/phpdotenv": "^2.4.0",
@@ -23,12 +23,6 @@
       "php": "7.0"
     }
   },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "git@github.com:craftcms/gatsby-helper.git"
-    }
-  ],
   "scripts": {
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
