Add env var hint.

--- a/headless-front-end/gatsby/.env.example
+++ b/headless-front-end/gatsby/.env.example
@@ -1,2 +1,5 @@
 CRAFTGQL_TOKEN = 1CFHS57JCTtYwQk0_2J-lD8dU3ACIfNU
 CRAFTGQL_URL = http://starter-blog.test/api
+
+# uncomment the next line if you’ve configured live preview
+# ENABLE_GATSBY_REFRESH_ENDPOINT = true
