Use updated source and helper plugins.

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,5 @@ DEFAULT_SITE_URL="http://starter-blog.test"
 # See the README for more information.
 # If you need to change the port here, change it also in `webpack.config.js` line 19.
 WEBPACK_SERVER_URL="http://localhost:8080"
+
+GATSBY_PREVIEW_TARGET="http://localhost:8000/__refresh"
