--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test:
-    name: PHP ${{ matrix.php-versions }} + ${{ matrix.db }} on ${{ matrix.operating-system }}
+    name: Gatsby + Craft with PHP ${{ matrix.php-versions }} + ${{ matrix.db }}
     runs-on: ${{ matrix.operating-system }}
 
     strategy:
@@ -72,11 +72,11 @@ jobs:
       - name: Add Craft demo content
         run: php craft migrate
 
-      - name: Install Gatsby dependencies
-        run: npm install
-
       - name: Prepare Gatsby environment
         run: cp .github/workflows/.env-gatsby headless-front-end/gatsby/.env
+
+      - name: Install Gatsby dependencies
+        run: node --version && cd headless-front-end/gatsby && npm install
 
       - name: Build Gatsby site
         run: gatsby build
