Try quick server.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,6 +72,9 @@ jobs:
       - name: Add Craft demo content
         run: php craft migrate/up --track=content --interactive=0
 
+      - name: Start simple Craft web server
+        run: php craft serve
+
       - name: Prepare Gatsby environment
         run: cp .github/workflows/.env-gatsby headless-front-end/gatsby/.env
 
