--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,6 +45,12 @@ jobs:
         ports:
           - 5432:5432
         options: --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=3
+      nginx:
+        image: craftcms/nginx:7.4
+        ports:
+          - 8080:80
+        volumes:
+          - .:/app
 
     steps:
       - uses: actions/checkout@v2
@@ -71,9 +77,6 @@ jobs:
 
       - name: Add Craft demo content
         run: php craft migrate/up --track=content --interactive=0
-
-      - name: Start simple Craft web server
-        run: php craft serve
 
       - name: Prepare Gatsby environment
         run: cp .github/workflows/.env-gatsby headless-front-end/gatsby/.env
