--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
         ports:
           - 8080:8080
         volumes:
-          - nginx_volume:/app
+          - $GITHUB_WORKSPACE:/app
 
     steps:
       - uses: actions/checkout@v2
