Better curl test.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,7 +78,8 @@ jobs:
         run: php craft migrate/up --track=content --interactive=0
 
       - name: Ping GraphQL endpoint
-        run: curl http://localhost:8080/api
+        run: |-
+          curl -X POST -H "Content-Type: application/json" --data '{ "query": "{ ping }" }' http://localhost:8080/api
 
       - name: Prepare Gatsby environment
         run: cp .github/workflows/.env-gatsby headless-front-end/gatsby/.env
