--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,7 +79,7 @@ jobs:
 
       - name: Ping GraphQL endpoint
         run: |-
-          curl -X POST -H "Content-Type: application/json" --data '{ "query": "{ ping }" }' http://localhost:8080/api
+          curl -s -X POST -H "Content-Type: application/json" --data '{ "query": "{ ping }" }' http://localhost:8080/api
 
       - name: Prepare Gatsby environment
         run: cp .github/workflows/.env-gatsby headless-front-end/gatsby/.env
