--- a/.github/workflows/.env.mysql
+++ b/.github/workflows/.env.mysql
@@ -3,4 +3,4 @@ DB_DSN="mysql:host=127.0.0.1;port=3306;dbname=test"
 DB_USER="root"
 DB_PASSWORD="root"
 DB_TABLE_PREFIX=""
-CRAFT_EPHEMERAL=true
+ENVIRONMENT=test
