--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,7 +76,7 @@ jobs:
         run: php craft migrate/up --track=content --interactive=0
 
       - name: Set Craft writable folder permissions
-        run: chmod 777 config && chmod 777 storage
+        run: chmod -R 777 config storage
 
       - name: Ping GraphQL endpoint
         run: |-
