--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -94,3 +94,10 @@ jobs:
           GATSBY_PROJECT_PATH: "./headless-front-end/gatsby"
         with:
           gatsby-arg: build
+      
+      - name: Upload Craft logs
+        uses: actions/upload-artifact@v2
+        with:
+          name: craft-logs
+          path: storage/logs
+
