--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         operating-system: [ubuntu-latest]
         php-versions: ["7.4"]
-        db: ["mysql"]
+        db: ["pgsql"]
     services:
       mysql:
         image: mysql:5.7
