--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,10 +86,10 @@ jobs:
         run: cp .github/workflows/.env-gatsby headless-front-end/gatsby/.env
 
       - name: Install Gatsby dependencies
-        run: node --version && cd headless-front-end/gatsby && npm install && npm install --global gatsby-cli
+        run: node --version && cd headless-front-end/gatsby && npm install && npm install gatsby-cli
 
       - name: Build Gatsby site
-        run: gatsby build
+        run: npm run build
 
       - name: Upload Craft logs
         uses: actions/upload-artifact@v2
