--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -89,7 +89,7 @@ jobs:
         run: node --version && cd headless-front-end/gatsby && npm install && npm install gatsby-cli
 
       - name: Build Gatsby site
-        run: npm run build
+        run: cd headless-front-end/gatsby && npm run build
 
       - name: Upload Craft logs
         uses: actions/upload-artifact@v2
