--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-  "name": "craftcms/starter-blog-twig",
+  "name": "craftcms/starter-blog",
   "description": "A Craft CMS blog site starter with Tailwind CSS",
   "type": "project",
   "license": "0BSD",
   "require": {
     "clubstudioltd/craft-asset-rev": "^6.0",
-    "craftcms/cms": "^3.4.3",
+    "craftcms/cms": "^3.6",
     "craftcms/gatsby-helper": "^1.0.0-beta.2",
     "craftcms/redactor": "^2.5.0",
     "nystudio107/craft-typogrify": "^1.1",
@@ -21,7 +21,7 @@
     "sort-packages": true,
     "optimize-autoloader": true,
     "platform": {
-      "php": "7.0"
+      "php": "7.2"
     }
   },
   "scripts": {
