--- a/headless-front-end/gatsby/package.json
+++ b/headless-front-end/gatsby/package.json
@@ -12,7 +12,7 @@
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.13.1",
-    "gatsby-source-craft": "^1.0.0-beta.2",
+    "gatsby-source-craft": "^1.0.0",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "nuka-carousel": "^4.7.5",
