--- a/package.json
+++ b/package.json
@@ -11,33 +11,33 @@
   "scripts": {
     "dev": "NODE_ENV=development webpack --mode=development",
     "build": "NODE_ENV=production webpack --mode=production",
-    "hot": "NODE_ENV=development webpack-dev-server --hot"
+    "hot": "NODE_ENV=development webpack serve --mode development"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@fullhuman/postcss-purgecss": "^1.3.0",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@fullhuman/postcss-purgecss": "^4.0.2",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.6.0",
-    "file-loader": "^4.3.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "css-loader": "^5.1.3",
+    "css-minimizer-webpack-plugin": "^1.3.0",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^5.2.0",
     "sane": "^4.1.0",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^11.0.1",
     "siema": "^1.5.1",
-    "style-loader": "^0.23.1",
-    "tailwindcss": "^1.9.6",
-    "terser-webpack-plugin": "^1.3.0",
-    "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "^2.2.0"
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.3",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.26.1",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-manifest-plugin": "^3.1.0"
   },
   "dependencies": {
-    "jquery": "^3.5.1"
+    "jquery": "^3.6.0"
   }
 }
