--- a/headless-front-end/gatsby/package.json
+++ b/headless-front-end/gatsby/package.json
@@ -5,29 +5,27 @@
   "version": "1.0.0",
   "author": "Jake Dohm <jake.dohm@me.com>",
   "dependencies": {
-    "gatsby": "^2.31.0",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-manifest": "^2.12.0",
-    "gatsby-plugin-offline": "^2.2.7",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-sharp": "^2.13.1",
-    "gatsby-source-craft": "^1.0.0",
-    "gatsby-source-filesystem": "^2.11.0",
-    "gatsby-transformer-sharp": "^2.12.0",
-    "nuka-carousel": "^4.7.5",
+    "gatsby": "^3.2.0",
+    "gatsby-image": "^3.2.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-sass": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-source-craft": "^2.0.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "snyk": "^1.438.0"
+    "react-helmet": "^6.1.0",
+    "snyk": "^1.520.0",
+    "swiper": "^6.5.4"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.10.4",
-    "core-js": "^3.7.0",
-    "node-sass": "^4.14.1",
-    "prettier": "^1.19.1",
-    "tailwindcss": "^1.6.2"
+    "core-js": "^3.10.0",
+    "node-sass": "^5.0.0",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^2.0.4"
   },
   "keywords": [
     "gatsby",
