--- a/headless-front-end/gatsby/package.json
+++ b/headless-front-end/gatsby/package.json
@@ -16,6 +16,7 @@
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "prop-types": "^15.7.2",
+    "react": "^17.0.2",
     "react-helmet": "^6.1.0",
     "snyk": "^1.520.0",
     "swiper": "^6.5.4"
