--- a/headless-front-end/gatsby/package.json
+++ b/headless-front-end/gatsby/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "author": "Jake Dohm <jake.dohm@me.com>",
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^3.1.3",
     "gatsby": "^3.2.0",
     "gatsby-image": "^3.2.0",
     "gatsby-plugin-manifest": "^3.2.0",
