--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,7 +83,7 @@ jobs:
         run: cp .github/workflows/.env-gatsby headless-front-end/gatsby/.env
 
       - name: Install Gatsby dependencies
-        run: npm install && npm install gatsby-cli
+        run: npm install && npm install -g gatsby-cli
         working-directory: headless-front-end/gatsby
 
       - name: Build Gatsby site
