Try Gatsby CLI action.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,13 +82,12 @@ jobs:
       - name: Prepare Gatsby environment
         run: cp .github/workflows/.env-gatsby headless-front-end/gatsby/.env
 
-      - name: Install Gatsby dependencies
-        run: npm install && npm install -g gatsby-cli
-        working-directory: headless-front-end/gatsby
-
-      - name: Build Gatsby site
-        run: gatsby build
-        working-directory: headless-front-end/gatsby
+      - name: Build Gatsby Site
+        uses: jzweifel/gatsby-cli-github-action@master
+        env:
+          GATSBY_PROJECT_PATH: "./headless-front-end/gatsby"
+        with:
+          gatsby-arg: build
 
       - name: Upload Craft logs
         uses: actions/upload-artifact@v2
