--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,12 +82,16 @@ jobs:
       - name: Prepare Gatsby environment
         run: cp .github/workflows/.env-gatsby headless-front-end/gatsby/.env
 
+      - name: Remove root PostCSS config so Gatsby doesn’t try to use it
+        run: rm postcss.config.js
+
       - name: Install Gatsby dependencies
         run: npm install && npm install gatsby-cli
         working-directory: headless-front-end/gatsby
 
       - name: Build Gatsby site
-        run: cd headless-front-end/gatsby && npm run build
+        run: npm run build
+        working-directory: headless-front-end/gatsby
 
       - name: Upload Craft logs
         uses: actions/upload-artifact@v2
