--- a/headless-front-end/gatsby/package.json
+++ b/headless-front-end/gatsby/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^3.1.3",
     "gatsby": "^3.2.0",
+    "gatsby-cli": "^3.2.0",
     "gatsby-image": "^3.2.0",
     "gatsby-plugin-manifest": "^3.2.0",
     "gatsby-plugin-offline": "^4.2.0",
