--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "css-minimizer-webpack-plugin": "^1.3.0",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.9",
-    "node-sass": "^4.14.1",
     "postcss-loader": "^5.2.0",
     "sane": "^4.1.0",
+    "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "siema": "^1.5.1",
     "style-loader": "^2.0.0",
