--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "license": "0BSD",
   "require": {
     "clubstudioltd/craft-asset-rev": "^6.0",
-    "craftcms/cms": "^3.6",
-    "craftcms/gatsby-helper": "^1.0.0-beta.2",
+    "craftcms/cms": "^3.7",
+    "craftcms/gatsby-helper": "^1.0",
     "craftcms/redactor": "^2.5.0",
     "nystudio107/craft-typogrify": "^1.1",
     "vlucas/phpdotenv": "^2.4.0",
