--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,8 +1,16 @@
-dateModified: 1643069963
+dateModified: 1643070348
 email:
   fromEmail: support@craftcms.com
   fromName: 'Craft Blog'
   transportType: craft\mail\transportadapters\Sendmail
+fs:
+  uploads:
+    hasUrls: true
+    name: Uploads
+    settings:
+      path: '@webroot/uploads'
+    type: craft\fs\Local
+    url: '@web/uploads'
 meta:
   __names__:
     0c98f9b9-84bf-4766-af63-a3568b46c0a6: 'Rich Text' # Rich Text
@@ -40,10 +48,11 @@ system:
   edition: pro
   live: true
   name: 'Craft Blog'
-  schemaVersion: 3.7.8
+  schemaVersion: 4.0.0
   timeZone: America/Los_Angeles
 users:
   allowPublicRegistration: false
+  deactivateByDefault: false
   defaultGroup: null
   photoSubpath: ''
   photoVolumeUid: null
