--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,10 @@
   "description": "A Craft CMS blog site starter with Tailwind CSS",
   "type": "project",
   "license": "0BSD",
+  "minimum-stability": "dev",
   "require": {
     "craftcms/cms": "4.0.x-dev as 4.0",
+    "craftcms/redactor": "3.0.x-dev",
     "vlucas/phpdotenv": "^2.4.0"
   },
   "autoload": {
@@ -16,7 +18,7 @@
     "sort-packages": true,
     "optimize-autoloader": true,
     "platform": {
-      "php": "8.0"
+      "php": "8.0.2"
     }
   },
   "scripts": {
