--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
   "license": "0BSD",
   "minimum-stability": "dev",
   "require": {
-    "craftcms/cms": "4.0.x-dev as 4.0",
-    "craftcms/redactor": "3.0.x-dev",
+    "craftcms/cms": "^4.0.0-alpha.1",
+    "craftcms/redactor": "^3.0.x-dev",
+    "nystudio107/craft-typogrify": "^4.0.0-beta.1",
     "vlucas/phpdotenv": "^2.4.0"
   },
   "autoload": {
