--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,16 +1,8 @@
-dateModified: 1645654533
+dateModified: 1646269008
 email:
   fromEmail: support@craftcms.com
   fromName: 'Craft Blog'
   transportType: craft\mail\transportadapters\Sendmail
-fs:
-  uploads:
-    hasUrls: true
-    name: Uploads
-    settings:
-      path: '@webroot/uploads'
-    type: craft\fs\Local
-    url: '@web/uploads'
 meta:
   __names__:
     0c98f9b9-84bf-4766-af63-a3568b46c0a6: 'Rich Text' # Rich Text
@@ -44,15 +36,40 @@ meta:
     e567b6ab-3855-452b-a337-4c119dac4d62: 'Body Content' # Body Content
     f3400d6f-0f33-4cef-9521-f8f6620399ec: 'Craft Blog' # Craft Blog
     fb2f8912-57ad-4b4e-887d-e55f22a6d348: Embed # Embed
+plugins:
+  assetrev:
+    edition: standard
+    enabled: true
+    schemaVersion: 1.0.0
+  gatsby-helper:
+    edition: standard
+    enabled: true
+    schemaVersion: 2.0.0
+    settings:
+      previewServerUrl: ''
+      webhookTarget: $GATSBY_PREVIEW_TARGET
+  oembed:
+    edition: standard
+    enabled: true
+    schemaVersion: 1.0.1
+    settings:
+      enableCache: '1'
+  redactor:
+    edition: standard
+    enabled: true
+    schemaVersion: 2.3.0
+  typogrify:
+    edition: standard
+    enabled: true
+    schemaVersion: 1.0.0
 system:
   edition: pro
   live: true
   name: 'Craft Blog'
-  schemaVersion: 4.0.0.3
+  schemaVersion: 4.0.0.4
   timeZone: America/Los_Angeles
 users:
   allowPublicRegistration: false
-  deactivateByDefault: false
   defaultGroup: null
   photoSubpath: ''
   photoVolumeUid: null
