--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,10 @@
     "optimize-autoloader": true,
     "platform": {
       "php": "7.2.5"
+    },
+    "allow-plugins": {
+      "yiisoft/yii2-composer": true,
+      "craftcms/plugin-installer": true
     }
   },
   "scripts": {
