--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
   "license": "0BSD",
   "minimum-stability": "dev",
   "require": {
+    "clubstudioltd/craft-asset-rev": "dev-feature/craft-4",
     "craftcms/cms": "^4.0.0-alpha.1",
-    "craftcms/gatsby-helper": "craft-4-dev",
+    "craftcms/gatsby-helper": "2.0.x-dev",
     "craftcms/redactor": "^3.0.x-dev",
     "nystudio107/craft-typogrify": "^4.0.0-beta.1",
     "vlucas/phpdotenv": "^2.4.0"
@@ -16,6 +17,12 @@
       "modules\\": "modules/"
     }
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/mattstein/craft-asset-rev"
+    }
+  ],
   "config": {
     "sort-packages": true,
     "optimize-autoloader": true,
