--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "minimum-stability": "dev",
   "require": {
     "clubstudioltd/craft-asset-rev": "dev-feature/craft-4",
-    "craftcms/cms": "^4.0.0-alpha.1",
+    "craftcms/cms": "^4.0.0-beta.1",
     "craftcms/gatsby-helper": "2.0.x-dev",
     "craftcms/redactor": "^3.0.x-dev",
     "nystudio107/craft-typogrify": "^4.0.0-beta.1",
