--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,32 @@
 # The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
-ENVIRONMENT="dev"
+CRAFT_ENVIRONMENT="dev"
 
 # The secure key Craft will use for hashing and encrypting data
-SECURITY_KEY="vzVMamc25ty46Bt8OtP8bDTwGIEzIwWB"
+CRAFT_SECURITY_KEY="vzVMamc25ty46Bt8OtP8bDTwGIEzIwWB"
 
 # The database driver that will be used ('mysql' or 'pgsql')
-DB_DRIVER="mysql"
+CRAFT_DB_DRIVER="mysql"
 
 # The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
-DB_SERVER="localhost"
+CRAFT_DB_SERVER="localhost"
 
 # The database username to connect with
-DB_USER="root"
+CRAFT_DB_USER="root"
 
 # The database password to connect with
-DB_PASSWORD="root"
+CRAFT_DB_PASSWORD="root"
 
 # The name of the database to select
-DB_DATABASE="starter_blog"
+CRAFT_DB_DATABASE="starter_blog"
 
 # The database schema that will be used (PostgreSQL only)
-DB_SCHEMA="public"
+CRAFT_DB_SCHEMA="public"
 
 # The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
-DB_TABLE_PREFIX=""
+CRAFT_DB_TABLE_PREFIX=""
 
 # The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
-DB_PORT="3306"
-
-# The site url for this environment (no trailing slash)
-# The file `config/assetrev.php` depends on this environment variable.
-DEFAULT_SITE_URL="http://starter-blog.test"
+CRAFT_DB_PORT="3306"
 
 # Webpack dev server host for hot reloading.
 # See the README for more information.
