Update .env to match DDEV values

--- a/.env.example
+++ b/.env.example
@@ -2,22 +2,22 @@
 CRAFT_ENVIRONMENT="dev"
 
 # The secure key Craft will use for hashing and encrypting data
-CRAFT_SECURITY_KEY="vzVMamc25ty46Bt8OtP8bDTwGIEzIwWB"
+CRAFT_SECURITY_KEY=""
 
 # The database driver that will be used ('mysql' or 'pgsql')
 CRAFT_DB_DRIVER="mysql"
 
 # The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
-CRAFT_DB_SERVER="localhost"
+CRAFT_DB_SERVER="db"
 
 # The database username to connect with
-CRAFT_DB_USER="root"
+CRAFT_DB_USER="db"
 
 # The database password to connect with
-CRAFT_DB_PASSWORD="root"
+CRAFT_DB_PASSWORD="db"
 
 # The name of the database to select
-CRAFT_DB_DATABASE="starter_blog"
+CRAFT_DB_DATABASE="db"
 
 # The database schema that will be used (PostgreSQL only)
 CRAFT_DB_SCHEMA="public"
@@ -32,5 +32,4 @@ CRAFT_DB_PORT="3306"
 # See the README for more information.
 # If you need to change the port here, change it also in `webpack.config.js` line 19.
 WEBPACK_SERVER_URL="http://localhost:8080"
-
 GATSBY_PREVIEW_TARGET="http://localhost:8000/__refresh"
