--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,29 @@
-# The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
-CRAFT_ENVIRONMENT="dev"
+# Read about configuration, here:
+# https://craftcms.com/docs/4.x/config/
+
+# The application ID used to to uniquely store session and cache data, mutex locks, and more
+CRAFT_APP_ID=
+
+# The environment Craft is currently running in (dev, staging, production, etc.)
+CRAFT_ENVIRONMENT=dev
 
 # The secure key Craft will use for hashing and encrypting data
-CRAFT_SECURITY_KEY=""
+CRAFT_SECURITY_KEY=
 
-# The database driver that will be used ('mysql' or 'pgsql')
-CRAFT_DB_DRIVER="mysql"
+# Database connection settings
+CRAFT_DB_DRIVER=mysql
+CRAFT_DB_SERVER=db
+CRAFT_DB_PORT=3306
+CRAFT_DB_DATABASE=db
+CRAFT_DB_USER=db
+CRAFT_DB_PASSWORD=db
+CRAFT_DB_SCHEMA=public
+CRAFT_DB_TABLE_PREFIX=
 
-# The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
-CRAFT_DB_SERVER="db"
-
-# The database username to connect with
-CRAFT_DB_USER="db"
-
-# The database password to connect with
-CRAFT_DB_PASSWORD="db"
-
-# The name of the database to select
-CRAFT_DB_DATABASE="db"
-
-# The database schema that will be used (PostgreSQL only)
-CRAFT_DB_SCHEMA="public"
-
-# The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
-CRAFT_DB_TABLE_PREFIX=""
-
-# The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
-CRAFT_DB_PORT="3306"
+# General settings (see config/general.php)
+DEV_MODE=true
+ALLOW_ADMIN_CHANGES=true
+DISALLOW_ROBOTS=true
 
 # Webpack dev server host for hot reloading.
 # See the README for more information.
