Update Gatsby config + documentation

--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,7 @@ DEV_MODE=true
 ALLOW_ADMIN_CHANGES=true
 DISALLOW_ROBOTS=true
 
-# Webpack dev server host for hot reloading.
-# See the README for more information.
-# If you need to change the port here, change it also in `webpack.config.js` line 19.
-WEBPACK_SERVER_URL="http://localhost:8080"
-GATSBY_PREVIEW_TARGET="http://localhost:8000/__refresh"
+# Read about Gatsby preview + build hooks:
+# -> https://www.gatsbyjs.com/docs/reference/cloud/build-and-preview-webhooks/
+GATSBY_PREVIEW_TARGET="@web:8000/__refresh"
+# GATSBY_BUILD_TARGET="https://webhook.gatsbyjs.com/hooks/data_source/publish/site-id"
