Update Craft + modernize project

--- a/.env.example
+++ b/.env.example
@@ -2,22 +2,22 @@
 ENVIRONMENT="dev"
 
 # The secure key Craft will use for hashing and encrypting data
-SECURITY_KEY="vzVMamc25ty46Bt8OtP8bDTwGIEzIwWB"
+SECURITY_KEY=""
 
 # The database driver that will be used ('mysql' or 'pgsql')
 DB_DRIVER="mysql"
 
 # The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
-DB_SERVER="localhost"
+DB_SERVER="db"
 
 # The database username to connect with
-DB_USER="root"
+DB_USER="db"
 
 # The database password to connect with
-DB_PASSWORD="root"
+DB_PASSWORD="db"
 
 # The name of the database to select
-DB_DATABASE="starter_blog"
+DB_DATABASE="db"
 
 # The database schema that will be used (PostgreSQL only)
 DB_SCHEMA="public"
@@ -30,7 +30,7 @@ DB_PORT="3306"
 
 # The site url for this environment (no trailing slash)
 # The file `config/assetrev.php` depends on this environment variable.
-DEFAULT_SITE_URL="http://starter-blog.test"
+DEFAULT_SITE_URL="https://starter-blog.ddev.site"
 
 # Webpack dev server host for hot reloading.
 # See the README for more information.
