--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,12 +62,12 @@ jobs:
 
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress
-      
+
       - name: Add Docker database host aliases to build environment
         run: sudo echo "127.0.0.1 nginx postgres mysql" | sudo tee -a /etc/hosts
 
       - name: Install Craft
-        run: php craft install/craft --username=admin --password=password --email=test@craftcms.com --site-name=Craft Blog --site-url=$DEFAULT_SITE_URL --interactive=0
+        run: php craft install/craft --username=admin --password=password --email=test@craftcms.com --site-name=Craft Blog --site-url=$DEFAULT_SITE_URL --language=en_us --interactive=0
 
       - name: Add Craft demo content
         run: php craft migrate/up --track=content --interactive=0
